--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="skills">
         <div class="container">  
-           Git Now !!!!
+           Git Now !!!
         </div>
     </section>
 
