--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Education</h2>
         <ul>
             <li>Belarusian Polltechnikal University</li>
-            <li>Electrical Software </li>
+            <li>Electrical engineer </li>
         </ul>
                 <span> Rschool </span>
 
